# zero2prod

./: Cargo.toml  Dockerfile
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250404122123_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
